# violas-client-sdk

./: LICENSE  Makefile.am  README.md  autogen.sh  build.sh  build_setup.sh  cleanup.sh  configure.ac  dev.sh  publish.sh  release_install.sh
Android/: settings.gradle
Android/app/: build.gradle
Android/sdk/: build.gradle
Android/sdk/src/main/cpp/: CMakeLists.txt  client.cpp  client.h  io_violas_sdk_Client.cpp  io_violas_sdk_Client.h  io_violas_sdk_Client_Account.h  io_violas_sdk_java_Client.cpp  io_violas_sdk_java_Token.cpp  io_violas_sdk_java_Token.h  jni_violas_sdk.cpp  jni_violas_sdk.h  token.cpp
AndroidClientSdk/: settings.gradle
AndroidClientSdk/app/: build.gradle
AndroidClientSdk/libraclient/: build.gradle
Java/: README.md  build.sh  run.sh
Java/src/jni/: Makefile.am  Makefile.in  io_violas_sdk_Client.cpp  io_violas_sdk_Client.h  io_violas_sdk_Token.cpp  io_violas_sdk_Token.h  io_violas_sdk_java_Client.cpp  io_violas_sdk_java_Client.h  io_violas_sdk_java_Token.cpp  io_violas_sdk_java_Token.h  makefile
Java/test/: Demo.java  mnenonic  run.sh
PythonSdk/: Makefile  violas.py
android/sdk/: .project  build.gradle
cpp/: CMakeLists.txt
cpp/command/: CMakeLists.txt
cpp/command/src/: Makefile.am  command.cpp  main.cpp
cpp/deployment/: CMakeLists.txt
cpp/deployment/src/: main.cpp
cpp/framework/: CMakeLists.txt  README.md  diem_framework.hpp  diem_types.hpp
cpp/framework/src/: bcs.hpp  diem_framework.cpp  ed25519.hpp  main.cpp  serde.hpp
cpp/include/: argument.hpp  bcs_serde.hpp  console.hpp  jni_violas_sdk.h  json_rpc.hpp  serde_bcs.hpp  ssl_aes.hpp  utils.h  violas_sdk2.hpp
cpp/lib/: update.sh
cpp/meta42-cli/: CMakeLists.txt
cpp/meta42-cli/src/: main.cpp  meta42.cpp  meta42.hpp
cpp/nft/: CMakeLists.txt
cpp/nft-cli/: CMakeLists.txt
cpp/nft-cli/src/: main.cpp  nft.cpp  nft.hpp
cpp/nft-store/: CMakeLists.txt
cpp/nft-store-2/: CMakeLists.txt  README.md
cpp/nft-store-2/src/: main.cpp  nft_store.cpp  nft_store.hpp
cpp/nft-store-2/src/nft/: nft.cpp  nft.hpp  portrait.cpp  portrait.hpp
cpp/nft-store-2/test/: main.cpp
cpp/nft-store/src/: main.cpp  nft_store.cpp  nft_store.hpp
cpp/nft/src/: main.cpp  tea.hpp
cpp/sdk/: CMakeLists.txt
cpp/sdk/include/: account_state_2.hpp  bcs_serde.hpp  co_helper.hpp  console.hpp  ed25519.hpp  json_rpc.hpp  nft.cpp  nft.hpp  utils.hpp  violas_client2.hpp  violas_sdk2.hpp  wallet.hpp
cpp/sdk/src/: console.cpp  ed25519.cpp  jni_violas_sdk.cpp  json_rpc.cpp  mnemonic.cpp  mnemonic.hpp  nft.cpp  violas_client2.cpp  violas_sdk.cpp  violas_sdk2.cpp  wallet.cpp  wallet.hpp
cpp/src/: CMakeLists.txt  Makefile.am  console.cpp  json.hpp  json_rpc.cpp  py_violas_sdk.cpp  rust_client_proxy.hpp  violas_sdk.cpp  violas_sdk.hpp  violas_sdk2.cpp  violas_sdk2.hpp
cpp/test/: CMakeLists.txt  test_bcs.cpp
cpp/testnet/: CMakeLists.txt  Violas multi-currency info.md  exchange.mnemonic  nodes
cpp/testnet/mnemonic/: backend.mne  bank.mne  bank_beijing.mne  bridge.mne  nft-store.mne  nft.mne  oracle.mne  vls.mne
cpp/testnet/src/: Makefile.am  argument.hpp  deployment.cpp  terminal.h  test_bank.cpp  test_exchange.cpp  test_libra.cpp  test_violas.cpp  utils.h  violas_client.cpp  violas_crypto.cpp  violas_deployment.cpp  violas_swap.cpp  violas_vls.cpp
cpp/violas_cli/: CMakeLists.txt
cpp/violas_cli/src/: Makefile.am  command.cpp  command.hpp  main.cpp
cpp/vls/: CMakeLists.txt
cpp/vls/src/: vls.cpp
cppSdk/: Doc.md  README.md  build_for_windows.sh  build_lib_for_android.sh  libra_client.cpp  libra_client.hpp  makefile  rust_client_proxy.hpp
cppSdk/move/: build.sh  build_all.sh  update.sh  violas.mv
cppSdk/scripts/: borrow.move  borrow.mv  build.sh  build_all.sh  cancel.mvir  cancel_order.move  cancel_order.mv  coin_eur.mv  coin_usd.move  coin_usd.mv  create_token.move  create_token.mv  destroy_coin.mvir  destroy_owner.mvir  libra_mint.move  libra_mint.mv  libra_transfer.mv  liquidate_borrow.move  liquidate_borrow.mv  lock.move  lock.mv  make.mvir  make_order.move  make_order.mv  mint.move  mint.mv  mint.mvir  mint_with_data.mvir  move_owner.move  move_owner.mv  publish.move  publish.mv  publish.mvir  record.mvir  redeem.move  redeem.mv  repay_borrow.move  repay_borrow.mv  take.mvir  take_order.move  (+19 more)
cppSdk/src/: Makefile.am  jni_violas_sdk.cpp  jni_violas_sdk.h  libra_client.cpp  makefile  rust_client_proxy.hpp  violas_sdk.cpp  violas_sdk.hpp
cppSdk/test/: Makefile  consensus_peers.config.toml  custom_script.mvir  main.cpp  mnemonic  my_module.mv  my_module.mvir  run.sh  temp_faucet_keys  test  (+3 more)
cppSdk/testnet/src/: Makefile.am  main.cpp  terminal.h  test_bank.cpp  test_exchange.cpp  test_libra.cpp  test_rust_cpp.cpp  test_violas.cpp  transfer.cpp  violas_client.cpp
doc/: Violas SDK.odt
java/: build.sh
move/: build.sh  move_build_all.sh  update.sh
python/: example.py  faucet_keys  run.sh
rust-client-proxy/: Cargo.toml  README.md  build.rs  build_android_arm64.sh  client.mnemonic  client_proxy.rs
rust-client-proxy/src/: android.rs  client_proxy.rs  compiler_proxy.rs  ios.rs  lib.rs  libra_client.rs  libra_client_proxy.rs  move_compiler.rs  violas_account.rs  violas_client.rs  violas_ffi.rs  wasm.rs  x86_64.rs
rust-client-proxy/src/ffi/: _build.rs  client.hpp  mod.rs
rust-client-proxy/test/x86_64/: Makefile  libra_client.cpp  libra_client.hpp  main.cpp  run.sh  rust_client_proxy.hpp
rust/client-proxy/: Cargo.toml  README.md  libviolas_client.doxy
rust/client-proxy/src/: lib.rs  libra_client.rs  libra_client_proxy.rs  violas_account.rs  violas_client.rs  violas_ffi.rs
rust/client-proxy/src/ffi/: client.hpp  mod.rs
rust/oracle-service/: Cargo.toml
rust/oracle-service/src/: main.rs  oracle.rs
rust/violas-client/: Cargo.toml  README.md
rust/violas-client/src/: diem_client.rs  diem_client_proxy.rs  lib.rs  libra_client.rs  libra_client_proxy.rs  violas_account.rs  violas_client.rs  violas_ffi.rs  violas_resource.rs
rust/violas-client/src/ffi/: client.hpp  mod.rs
rust/violas-oracle/: Cargo.toml  client.mnemonic
rust/violas-oracle/src/: jsonrpc_server.rs  main.rs  oracle.rs
(+462 files in other folders)
