[package]
name = "client-proxy"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
cpp = "0.5.5"
serde_json = "1.0.51"
tempdir = "0.3"

anyhow = "1.0.31"
chrono = "0.4.13"
hex = "0.4.2"
proptest = { version = "0.10.0", optional = true }
rustyline = "6.2.0"
rust_decimal = "1.7.0"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
walkdir = "2.3.1"

libra-config = { path = "../../libra/config", version = "0.1.0" }
generate-key = { path = "../../libra/config/generate-key", version = "0.1.0" }
crash-handler = { path = "../../libra/common/crash-handler", version = "0.1.0" }
libra-crypto = { path = "../../libra/crypto/crypto", version = "0.1.0" }
lcs = { path = "../../libra/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-wallet = { path = "../../libra/testsuite/cli/libra-wallet", version = "0.1.0" }
libra-json-rpc-client = { path = "../../libra/client/json-rpc", version = "0.1.0" }
libra-logger =  { path = "../../libra/common/logger", version = "0.1.0" }
libra-metrics = { path = "../../libra/common/metrics", version = "0.1.0" }
libra-temppath = { path = "../../libra/common/temppath/", version = "0.1.0" }
libra-workspace-hack = { path = "../../libra/common/workspace-hack", version = "0.1.0" }
libra-network-address = { path = "../../libra/network/network-address", version = "0.1.0" }
resource-viewer = { path = "../../libra/language/resource-viewer", version = "0.1.0" }
compiled-stdlib = { path = "../../libra/language/stdlib/compiled",  version = "0.1.0" }
transaction-builder = { path = "../../libra/language/transaction-builder", version = "0.1.0" }
libra-types = { path = "../../libra/types", version = "0.1.0" }

move-lang = { path = "../../libra/language/move-lang", version = "0.0.1" }
move-core-types = { path = "../../libra/language/move-core/types"}

[dev-dependencies]
proptest = "0.10.0"

[features]
default = []
fuzzing = ["proptest", "libra-crypto/fuzzing", "libra-types/fuzzing"]

[build-dependencies]
cpp_build = "0.5.5"

[profile.release]
panic = 'abort'

