[package]
name = "client-proxy"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cpp = "0.5.5"
serde_json = "1.0.51"
tempdir = "0.3"

anyhow = "1.0.31"
chrono = "0.4.13"
hex = "0.4.2"
proptest = { version = "0.10.0", optional = true }
rustyline = "6.2.0"
rust_decimal = "1.7.0"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.114", features = ["derive"] }
walkdir = "2.3.1"

libra-config = { path = "../../../Violas/config", version = "0.1.0" }
generate-key = { path = "../../../Violas/config/generate-key", version = "0.1.0" }
crash-handler = { path = "../../../Violas/common/crash-handler", version = "0.1.0" }
libra-crypto = { path = "../../../Violas/crypto/crypto", version = "0.1.0" }
lcs = { path = "../../../Violas/common/lcs", version = "0.1.0", package = "libra-canonical-serialization" }
libra-wallet = { path = "../../../Violas/testsuite/cli/libra-wallet", version = "0.1.0" }
libra-json-rpc-client = { path = "../../../Violas/client/json-rpc", version = "0.1.0" }
libra-logger =  { path = "../../../Violas/common/logger", version = "0.1.0" }
libra-metrics = { path = "../../../Violas/common/metrics", version = "0.1.0" }
libra-temppath = { path = "../../../Violas/common/temppath/", version = "0.1.0" }
libra-workspace-hack = { path = "../../../Violas/common/workspace-hack", version = "0.1.0" }
libra-network-address = { path = "../../../Violas/network/network-address", version = "0.1.0" }
resource-viewer = { path = "../../../Violas/language/resource-viewer", version = "0.1.0" }
compiled-stdlib = { path = "../../../Violas/language/stdlib/compiled",  version = "0.1.0" }
transaction-builder = { path = "../../../Violas/language/transaction-builder", version = "0.1.0" }
libra-types = { path = "../../../Violas/types", version = "0.1.0" }

#move-lang = { path = "../../../Violas/language/move-lang", version = "0.0.1" }
move-core-types = { path = "../../../Violas/language/move-core/types"}

[dev-dependencies]
proptest = "0.10.0"

[features]
default = []
fuzzing = ["proptest", "libra-crypto/fuzzing", "libra-types/fuzzing"]

[build-dependencies]
cpp_build = "0.5.5"

[profile.release]
panic = 'abort'

