[package]
name = "oracle-service"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5"
hyper = "0.13"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1"

[profile.release]
panic = 'abort'