[package]
name = "violas-client"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cpp = "0.5.5"
serde_json = "1.0.51"
tempdir = "0.3"

anyhow = "1.0.31"
chrono = "0.4.13"
hex = "0.4.2"
proptest = { version = "0.10.0", optional = true }
rustyline = "6.2.0"
rust_decimal = "1.7.0"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "=1.0.117", features = ["derive"] }
tokio = { version = "0.2.22", features = ["full"] }
walkdir = "2.3.1"
bcs = "0.1.1"

diem-config = { path = "../../../Violas/config", version = "0.1.0" }
generate-key = { path = "../../../Violas/config/generate-key", version = "0.1.0" }
crash-handler = { path = "../../../Violas/common/crash-handler", version = "0.1.0" }
diem-crypto = { path = "../../../Violas/crypto/crypto", version = "0.1.0" }
diem-wallet = { path = "../../../Violas/testsuite/cli/diem-wallet", version = "0.1.0" }
diem-json-rpc-client = { path = "../../../Violas/client/json-rpc", version = "0.1.0" }
diem-infallible = { path = "../../../Violas/common/infallible", version = "0.1.0" }
diem-logger =  { path = "../../../Violas/common/logger", version = "0.1.0" }
diem-metrics = { path = "../../../Violas/common/metrics", version = "0.1.0" }
diem-temppath = { path = "../../../Violas/common/temppath/", version = "0.1.0" }
diem-workspace-hack = { path = "../../../Violas/common/workspace-hack", version = "0.1.0" }
diem-network-address = { path = "../../../Violas/network/network-address", version = "0.1.0" }
resource-viewer = { path = "../../../Violas/language/tools/resource-viewer", version = "0.1.0" }
compiled-stdlib = { path = "../../../Violas/language/stdlib/compiled",  version = "0.1.0" }
transaction-builder = { path = "../../../Violas/language/transaction-builder", version = "0.1.0" }
diem-types = { path = "../../../Violas/types", version = "0.1.0" }

#move-lang = { path = "../../../Violas/language/move-lang", version = "0.0.1" }
move-core-types = { path = "../../../Violas/language/move-core/types"}

[dev-dependencies]
proptest = "0.10.0"

[features]
default = []
fuzzing = ["proptest", "diem-crypto/fuzzing", "diem-types/fuzzing"]

[build-dependencies]
cpp_build = "0.5.5"

[profile.release]
panic = 'abort'

