[package]
name = "violas-client"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
cpp = "0.5.5"
serde_json = "1.0.51"
tempdir = "0.3"

anyhow = "1.0.31"
chrono = "0.4.13"
hex = "0.4.2"
proptest = { version = "0.10.0", optional = true }
rustyline = "6.2.0"
rust_decimal = "1.7.0"
num-traits = "0.2.12"
reqwest = { version = "0.10.6", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1.0.124", features = ["derive"] }
tokio = { version = "0.2.22", features = ["full"] }
walkdir = "2.3.1"
bcs = "0.1.2"

diem-client = { path = "../../../Violas/sdk/client" }
diem-config = { path = "../../../Violas/config" }
generate-key = { path = "../../../Violas/config/generate-key" }
crash-handler = { path = "../../../Violas/common/crash-handler" }
diem-crypto = { path = "../../../Violas/crypto/crypto" }
diem-wallet = { path = "../../../Violas/testsuite/cli/diem-wallet" }
diem-json-rpc-client = { path = "../../../Violas/client/json-rpc" }
diem-infallible = { path = "../../../Violas/common/infallible" }
diem-logger =  { path = "../../../Violas/common/logger" }
diem-metrics = { path = "../../../Violas/common/metrics" }
diem-temppath = { path = "../../../Violas/common/temppath/" }
diem-workspace-hack = { path = "../../../Violas/common/workspace-hack" }
resource-viewer = { path = "../../../Violas/language/tools/resource-viewer" }
diem-framework = { path = "../../../Violas/language/diem-framework" }
diem-framework-releases = { path = "../../../Violas/language/diem-framework/releases" }
diem-transaction-builder = { path = "../../../Violas/sdk/transaction-builder" }

diem-types = { path = "../../../Violas/types" }

#move-lang = { path = "../../../Violas/language/move-lang", version = "0.0.1" }
move-core-types = { path = "../../../Violas/language/move-core/types"}

[dev-dependencies]
proptest = "0.10.0"

[features]
default = []
fuzzing = ["proptest", "diem-crypto/fuzzing", "diem-types/fuzzing"]

[build-dependencies]
cpp_build = "0.5.5"

[profile.release]
panic = 'abort'

