[package]
name = "violas-oracle"
version = "0.1.0"
authors = ["HunterSun2018 <sht@palliums.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "0.5"
hyper = "0.13"
hyper-timeout = "0.3"
hyper-tls = "0.4"
tokio = { version = "0.2", features = ["full"] }
pretty_env_logger = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
structopt = "0.3"
daemonize = "0.4"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }

diem-types = { path = "../../../Violas/types", version = "0.1.0" }
violas-client = { path = "../violas-client", version = "0.1.0" }

#libra-json-rpc = { path = "../../../Violas/json-rpc", version = "0.1.0"}

[profile.release]
panic = 'abort'